force-app/main/default/objects/objApplicationTemplateDetail__c/objApplicationTemplateDetail__c.object-meta.xml
<CustomObject>
    <label>申請定義明細</label>
    <pluralLabel>申請定義明細</pluralLabel>
    <nameField>
        <label>表示名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>