force-app/main/default/objects/objApplicationTemplateDetail__c/fields/AppTemplateRow__c.field-meta.xml
<CustomField>
    <fullName>AppTemplateRow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>申請定義行</label>
    <referenceTo>objApplicationTemplateRow__c</referenceTo>
    <relationshipLabel>申請定義明細</relationshipLabel>
    <relationshipName>appTemplateDetails</relationshipName>
    <type>Lookup</type>
</CustomField>