force-app/main/default/objects/objApplicationTemplateDetail__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>項目種別</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>標準</fullName>
                <default>true</default>
                <label>標準</label>
            </value>
            <value>
                <fullName>カスタム</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>