force-app/main/default/objects/objApplicationTemplateDetail__c/fields/ColumnOrder__c.field-meta.xml
<CustomField>
    <fullName>ColumnOrder__c</fullName>
    <label>列順序</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>