force-app/main/default/objects/objApplicationTemplateDetail__c/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <label>カスタム項目データ型</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>テキスト</fullName>
            </value>
            <value>
                <fullName>ロングテキストエリア</fullName>
            </value>
            <value>
                <fullName>数値</fullName>
            </value>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>日付</fullName>
            </value>
            <value>
                <fullName>時間</fullName>
            </value>
            <value>
                <fullName>選択リスト</fullName>
            </value>
            <value>
                <fullName>チェックボックス</fullName>
            </value>
            <value>
                <fullName>通貨</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>