force-app/main/default/objects/objApplicationTemplateDetail__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>補足説明</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>