force-app/main/default/objects/objApplicationTemplateDetail__c/fields/isCheckbox__c.field-meta.xml
<CustomField>
    <fullName>isCheckbox__c</fullName>
    <formula>ISPICKVAL(DataType__c,&apos;チェックボックス&apos;)</formula>
    <label>isチェックボックス</label>
    <type>Checkbox</type>
</CustomField>