force-app/main/default/objects/objApplicationTemplateDetail__c/fields/isCurrency__c.field-meta.xml
<CustomField>
    <fullName>isCurrency__c</fullName>
    <formula>ISPICKVAL(DataType__c,&apos;通貨&apos;)</formula>
    <label>is通貨</label>
    <type>Checkbox</type>
</CustomField>