force-app/main/default/objects/objApplicationTemplateDetail__c/fields/isDate__c.field-meta.xml
<CustomField>
    <fullName>isDate__c</fullName>
    <formula>ISPICKVAL(DataType__c,&apos;日付&apos;)</formula>
    <label>is日付</label>
    <type>Checkbox</type>
</CustomField>