force-app/main/default/objects/objApplicationTemplateDetail__c/fields/isLongTextArea__c.field-meta.xml
<CustomField>
    <fullName>isLongTextArea__c</fullName>
    <formula>ISPICKVAL(DataType__c,&apos;ロングテキストエリア&apos;)</formula>
    <label>isロングテキストエリア</label>
    <type>Checkbox</type>
</CustomField>