force-app/main/default/objects/objApplicationTemplateDetail__c/fields/isMail__c.field-meta.xml
<CustomField>
    <fullName>isMail__c</fullName>
    <formula>ISPICKVAL(DataType__c,&apos;メール&apos;)</formula>
    <label>isメール</label>
    <type>Checkbox</type>
</CustomField>