force-app/main/default/objects/objApplicationTemplateDetail__c/fields/isNumber__c.field-meta.xml
<CustomField>
    <fullName>isNumber__c</fullName>
    <formula>ISPICKVAL(DataType__c,&apos;数値&apos;)</formula>
    <label>is数値</label>
    <type>Checkbox</type>
</CustomField>