force-app/main/default/objects/objApplicationTemplateDetail__c/fields/isPicklist__c.field-meta.xml
<CustomField>
    <fullName>isPicklist__c</fullName>
    <formula>ISPICKVAL(DataType__c,&apos;選択リスト&apos;)</formula>
    <label>is選択リスト</label>
    <type>Checkbox</type>
</CustomField>