force-app/main/default/objects/objApplicationTemplateDetail__c/fields/isStdColumn__c.field-meta.xml
<CustomField>
    <fullName>isStdColumn__c</fullName>
    <formula>ISPICKVAL(Category__c,&apos;標準&apos;)</formula>
    <label>is標準項目</label>
    <type>Checkbox</type>
</CustomField>