force-app/main/default/objects/objApplicationTemplateDetail__c/fields/isText__c.field-meta.xml
<CustomField>
    <fullName>isText__c</fullName>
    <formula>ISPICKVAL(DataType__c,&apos;テキスト&apos;)</formula>
    <label>isテキスト</label>
    <type>Checkbox</type>
</CustomField>