force-app/main/default/objects/objApplicationTemplateDetail__c/fields/isTime__c.field-meta.xml
<CustomField>
    <fullName>isTime__c</fullName>
    <formula>ISPICKVAL(DataType__c,&apos;時間&apos;)</formula>
    <label>is時間</label>
    <type>Checkbox</type>
</CustomField>