force-app/main/default/objects/objApplicationTemplateDetail__c/fields/isURL__c.field-meta.xml
<CustomField>
    <fullName>isURL__c</fullName>
    <formula>ISPICKVAL(DataType__c,&apos;URL&apos;)</formula>
    <label>isURL</label>
    <type>Checkbox</type>
</CustomField>