force-app/main/default/objects/objApplicationTemplateDetail__c/fields/objApplicationTemplate__c.field-meta.xml
<CustomField>
    <fullName>objApplicationTemplate__c</fullName>
    <label>申請定義</label>
    <referenceTo>objApplicationTemplate__c</referenceTo>
    <relationshipLabel>個別項目</relationshipLabel>
    <relationshipName>objApplicationTemplateDetail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>