force-app/main/default/objects/objApplicationTemplateDetail__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <inlineHelpText
  >選択肢をカンマ区切りで入力してください。(最大1,024文字)</inlineHelpText>
    <label>選択肢</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>