force-app/main/default/objects/objApplicationTemplateDetail__c/fields/PageNum__c.field-meta.xml
<CustomField>
    <fullName>PageNum__c</fullName>
    <formula>AppTemplateRow__r.AppTemplatePage__r.Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ページ順序</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>