force-app/main/default/objects/objApplicationTemplateDetail__c/fields/PageNumber__c.field-meta.xml
<CustomField>
    <fullName>PageNumber__c</fullName>
    <label>ページ</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>