force-app/main/default/objects/objApplicationTemplateDetail__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>必須</label>
    <type>Checkbox</type>
</CustomField>