force-app/main/default/objects/objApplicationTemplateDetail__c/fields/RowNum__c.field-meta.xml
<CustomField>
    <fullName>RowNum__c</fullName>
    <formula>AppTemplateRow__r.Order__c</formula>
    <label>行順序</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>