force-app/main/default/objects/objApplicationTemplateDetail__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <defaultValue>1</defaultValue>
    <label>表示順</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>