force-app/main/default/objects/objApplicationTemplateDetail__c/fields/StdColumnName__c.field-meta.xml
<CustomField>
    <fullName>StdColumnName__c</fullName>
    <label>標準項目名</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>jpseps__LastnameKanji__c</fullName>
                <label>姓</label>
            </value>
            <value>
                <fullName>jpseps__FirstnameKanji__c</fullName>
                <label>名</label>
            </value>
            <value>
                <fullName>jpseps__LastnameYomi__c</fullName>
                <label>姓(読み仮名)</label>
            </value>
            <value>
                <fullName>jpseps__FirstnameYomi__c</fullName>
                <label>名(読み仮名)</label>
            </value>
            <value>
                <fullName>jpseps__Gender__c</fullName>
                <label>性別</label>
            </value>
            <value>
                <fullName>jpseps__Birthdate__c</fullName>
                <label>生年月日</label>
            </value>
            <value>
                <fullName>jpseps__Mail__c</fullName>
                <label>メールアドレス</label>
            </value>
            <value>
                <fullName>jpseps__Tel__c</fullName>
                <label>電話番号</label>
            </value>
            <value>
                <fullName>jpseps__Zipcode__c</fullName>
                <label>郵便番号</label>
            </value>
            <value>
                <fullName>jpseps__State__c</fullName>
                <label>都道府県</label>
            </value>
            <value>
                <fullName>jpseps__City__c</fullName>
                <label>市区町村</label>
            </value>
            <value>
                <fullName>jpseps__Street__c</fullName>
                <label>丁目字番地</label>
            </value>
            <value>
                <fullName>jpseps__Building__c</fullName>
                <label>建物名</label>
            </value>
            <value>
                <fullName>jpseps__JobCategory__c</fullName>
                <label>勤労形態</label>
            </value>
            <value>
                <fullName>jpseps__Comment__c</fullName>
                <label>コメント</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>