force-app/main/default/objects/objApplicationTemplateDetail__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>デフォルト値</label>
    <length>255</length>
    <type>Text</type>
</CustomField>