force-app/main/default/objects/objApplicationTemplateDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>